--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
   "scripts": {
     "test": "grunt test"
   },
+  "dependencies": {
+    "stitch": "~0.3.3",
+    "coffee-script": "~1.6.2"
+  },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-nodeunit": "~0.1.2",
-    "grunt": "~0.4.1",
-    "stitch": "~0.3.3",
-    "coffee-script": "~1.6.2"
+    "grunt": "~0.4.1"
   },
   "peerDependencies": {
     "grunt": "~0.4.1"
