Update package.json with link to issues

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "github.com/airbnb/grunt-rendr-stitch.git"
   },
   "bugs": {
-    "url": ""
+    "url": "https://github.com/airbnb/grunt-rendr-stitch/issues"
   },
   "licenses": [
     {
