--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "stitch": "git://github.com/joeyespo/stitch#2e4e6cdb2be204740ca341da787aaac00d347721",
-    "coffee-script": "~1.6.2"
+    "coffee-script": "~1.6.2",
+    "async": "~0.2.9"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.1.1",
